--- a/main.css
+++ b/main.css
@@ -1,107 +1,25 @@
 :root {
   font-size: 18px;
   font-family: 'Open Sans';
-  --text-primary: #141418;
-  --text-secondary: lightseagreen;
-  --bg-primary: #ffffff;
-  --bg-secondary: #cdcdce;
-  --navbar-width: 25%;
+--text-primary: #141418;
+--text-secondary: lightseagreen;
+--bg-primary: #ffffff;
+--bg-secondary: #cdcdce;
+--navbar-width: 25%;
+}
+
+em {
+  color: var(--text-secondary);
+  font-weight: bold;
 }
 
 .flex-container {
   margin-left: var(--navbar-width);
   margin-top: 10vh;
-  height: 80vh;
   display: flex;
-  overflow-x: auto;
+  overflow-x: scroll;
+  align-items: center;
 }
-
-figure.image {
-  display: flex;
-  text-align: center;
-  -webkit-perspective: 50em;
-  perspective: 50em;
-}
-
-figure.image * {
-  -webkit-box-sizing: padding-box;
-  box-sizing: padding-box;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-}
-
-figure.image figcaption {
-  
-  background-color: rgba(250, 250, 250, 0.9);
-
-  top: 60%;
-  left: 20%;
-  right: 20%;
-  position: absolute;
-
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  -webkit-transform: rotateX(-90deg);
-  transform: rotateX(-90deg);
-  -webkit-transform-origin: 50% 50%;
-  -ms-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
-  opacity: 0;
-  opacity: 0;
-  z-index: 1;
-}
-
-figure.image h4 {
-  margin-top: 15px;
-  margin-bottom: 5px;
-  color: #232323;
-}
-
-figure.image span {
-  font-size: 18px;
-  font-style: italic;
-  display: block;
-  color: #555555;
-}
-
-figure.image i {
-  position: relative!important;
-  background-color: var(--bg-primary);
-  width: 120px;
-  height: 40px;
-  display: inline-block;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 5px;
-  color: var(--text-secondary);
-  margin-top: 10px;
-  margin-bottom: 15px;
-}
-
-figure.image a {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: 1;
-}
-
-figure.image:hover figcaption,
-figure.image.hover figcaption {
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  opacity: 1;
-  -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
-}
-
-figure.image:hover:after,
-figure.image.hover:after {
-  -webkit-transform: rotateX(0);
-  transform: rotateX(0);
-  opacity: 0.9;
-}
-
 
 .flex-container::-webkit-scrollbar {
   width: 0.25rem;
@@ -115,6 +33,82 @@ figure.image.hover:after {
 .flex-container::-webkit-scrollbar-thumb {
   background: var(--text-secondary);
   border-radius: 10px;
+}
+
+.flex-image {
+  height: 80vh;
+  flex-grow: 1;
+  list-style-type: none;
+}
+
+.flex-image img {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
+.flex-image figcaption {
+  background-color: rgba(250, 250, 250, 0.9);
+  position: relative;
+  bottom: 50%;
+  border-radius: 0.5rem;
+  
+  margin: 1rem;
+  padding: 0.5rem;
+
+
+  text-align: center;
+
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transform: rotateX(-90deg);
+  transform: rotateX(-90deg);
+  -webkit-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  opacity: 1;
+  z-index: 1;
+}
+
+.flex-image h4 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.flex-image i {
+  position: relative!important;
+  background-color: var(--bg-primary);
+  width: 120px;
+  height: 40px;
+  display: inline-block;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 5px;
+  color: var(--text-secondary);
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.flex-image i:hover {
+  opacity: 0.75;
+}
+
+.flex-image:hover figcaption,
+.flex-image.hover figcaption {
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  opacity: 1;
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+
+.flex-image:hover:after,
+.flex-image.hover:after {
+  -webkit-transform: rotateX(0);
+  transform: rotateX(0);
+  opacity: 0.9;
 }
 
 
