--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Playfair+Display:ital,wght@1,500;1,800&display=swap');
+
 .navbar {
   width: var(--navbar-width);
   height: 60vh;
@@ -34,7 +36,9 @@
 .navbar-header {
   color: var(--text-primary);
   text-decoration: none;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Playfair Display';
+  font-weight: 800;
+  font-style: italic;
   text-align: center;
 }
 .navbar-header h1 {
